// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimplexPage /> should render correctly when correclty extracts address from url 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SimplexPage
    match={
        Object {
            "path": "/wallet/0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0/buyeth",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <webview
        src="https://hubii-simplex.netlify.com?address=0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0"
        style={
                Object {
                        "height": "100%",
                        "width": "100%",
                      }
        }
/>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "src": "https://hubii-simplex.netlify.com?address=0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
        "style": Object {
          "height": "100%",
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": null,
      "type": "webview",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <webview
          src="https://hubii-simplex.netlify.com?address=0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0"
          style={
                    Object {
                              "height": "100%",
                              "width": "100%",
                            }
          }
/>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "src": "https://hubii-simplex.netlify.com?address=0x910c4BA923B2243dc13e00A066eEfb8ffd905EB0",
          "style": Object {
            "height": "100%",
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "webview",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SimplexPage /> should render correctly when couldn't get address from url 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SimplexPage
    match={
        Object {
            "path": "1231",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Fatal error: Failed to locate selected wallet address",
      "style": Object {
        "color": "white",
      },
    },
    "ref": null,
    "rendered": "Fatal error: Failed to locate selected wallet address",
    "type": "p",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Fatal error: Failed to locate selected wallet address",
        "style": Object {
          "color": "white",
        },
      },
      "ref": null,
      "rendered": "Fatal error: Failed to locate selected wallet address",
      "type": "p",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
